# meteofrance

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: client.rs  errors.rs  lib.rs  session.rs
src/model/: de.rs  dictionary.rs  forecast.rs  mod.rs  observation.rs  phenomenoms.rs  place.rs  rain.rs  warning.rs
