[package]
name = "meteofrance"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"
