[package]
name = "meteofrance"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Client for for Météo-France API"
repository = "https://github.com/sanpii/meteofrance"

[dependencies]
thiserror = "2.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0"
